Revert and restore State concept and examples
We have discovered that 4 levels within the Process hierarchy are required
to have enough resolution to describe necessary concepts.

This reverts commit af8e51018105c4c1cbfe29b4579b961fed1a6da6.
This reverts commit bd6008d69951b9551530cb8ca37cd1c5f2c4cc89.

Signed-off-by: Jeremy Ho <jujaga@gmail.com>

--- a/docs/spec/data/process.mdx
+++ b/docs/spec/data/process.mdx
@@ -28,7 +28,7 @@ Loosely taking inspiration from [HL7 Timing](https://www.hl7.org/fhir/datatypes.
 ## Structure
 
 - A Process shall always contain a `class` and `concept` attribute.
-  - The `class` ordered set shall have at least one concept, and no more than three concepts defined. Classes do not
+  - The `class` ordered set shall have at least one concept, and no more than four concepts defined. Classes do not
   require the full path hierarchy defined depending on what the intention of the concept being shared.
 - A Process may contain a `status` attribute.
   - The `status` attribute acts as a free text field which represents the specific status value that may be stored or
