--- a/docs/spec/message/record_linkage.mdx
+++ b/docs/spec/message/record_linkage.mdx
@@ -28,7 +28,7 @@ consuming system.
 
 ## Structure
 
-A Process Event Set shall contain every standard message [Header](../data/header#structure) property, in addition to
+A Record Linkage shall contain every standard message [Header](../data/header#structure) property, in addition to
 the following properties:
 
 | Name | Cardinality | Type | Description & Constraints |
