--- a/docs/spec/message/record_linkage.mdx
+++ b/docs/spec/message/record_linkage.mdx
@@ -33,7 +33,7 @@ the following properties:
 
 | Name | Cardinality | Type | Description & Constraints |
 | --- | --- | --- | --- |
-| linked_system_id | 1..* | `string` | A valid URI that identifies the source system, service or asset that the linked data comes from. This URI should point to an authoritative asset tracking system or equivalent. However, the URI does not need to be machine readable. |
+| linked_system_id | 1..1 | `string` | A valid [NRIDS IT Service Management](https://apps.nrs.gov.bc.ca/int/jira/secure/ObjectSchema.jspa?id=1&typeId=5) code which identifies the source system, service or asset that the linked data originates from. |
 | linked_record_id | 1..1 | `string` | The record or primary key representing what record should be linked with the primary header record. |
 | linked_record_kind | 1..1 | `string` | The kind of record the source system stores this linked record as (i.e. Permit, Project, Submission or Tracking). |
 
