Add explicit prettier formatting support and enforcement
Signed-off-by: Jeremy Ho <jujaga@gmail.com>

--- a/docs/docusaurus/tutorial_basics/markdown_features.mdx
+++ b/docs/docusaurus/tutorial_basics/markdown_features.mdx
@@ -223,11 +223,12 @@ export const Highlight = ({ children, color }) => (
       borderRadius: '20px',
       color: '#fff',
       padding: '10px',
-      cursor: 'pointer',
+      cursor: 'pointer'
     }}
     onClick={() => {
       alert(`You clicked the color ${color} with label ${children}`);
-    }}>
+    }}
+  >
     {children}
   </span>
 );
