--- a/docs/spec/message/record_linkage.mdx
+++ b/docs/spec/message/record_linkage.mdx
@@ -7,14 +7,14 @@ tags:
   - developer
 ---
 
-import CodeBlock from "@theme/CodeBlock";
-import JSONSchemaViewer from "@theme/JSONSchemaViewer";
-import Tabs from "@theme/Tabs";
-import TabItem from "@theme/TabItem";
+import CodeBlock from '@theme/CodeBlock';
+import JSONSchemaViewer from '@theme/JSONSchemaViewer';
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
 
-import { generateResolverOptions } from "@site/src/components/shared";
-import example from "@site/docs/spec/message/record_linkage.example.json";
-import schema from "@site/docs/spec/message/record_linkage.schema.json";
+import { generateResolverOptions } from '@site/src/components/shared';
+import example from '@site/docs/spec/message/record_linkage.example.json';
+import schema from '@site/docs/spec/message/record_linkage.schema.json';
 
 [![Maturity:Planning](https://img.shields.io/badge/Maturity-Planning-orange)](../overview#maturity)
 
@@ -31,29 +31,45 @@ consuming system.
 A Record Linkage shall contain every standard message [Header](../data/header#structure) property, in addition to
 the following properties:
 
-| Name | Cardinality | Type | Description & Constraints |
-| --- | --- | --- | --- |
-| linked_system_id | 1..1 | `string` | A valid [NRIDS IT Service Management](https://apps.nrs.gov.bc.ca/int/jira/secure/ObjectSchema.jspa?id=1&typeId=5) code which identifies the source system, service or asset that the linked data originates from. |
-| linked_record_id | 1..1 | `string` | The record or primary key representing what record should be linked with the primary header record. |
-| linked_record_kind | 1..1 | `string` | The kind of record the source system stores this linked record as (i.e. Permit, Project, Submission or Tracking). |
+| Name               | Cardinality | Type     | Description & Constraints                                                                                                                                                                                         |
+| ------------------ | ----------- | -------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| linked_system_id   | 1..1        | `string` | A valid [NRIDS IT Service Management](https://apps.nrs.gov.bc.ca/int/jira/secure/ObjectSchema.jspa?id=1&typeId=5) code which identifies the source system, service or asset that the linked data originates from. |
+| linked_record_id   | 1..1        | `string` | The record or primary key representing what record should be linked with the primary header record.                                                                                                               |
+| linked_record_kind | 1..1        | `string` | The kind of record the source system stores this linked record as (i.e. Permit, Project, Submission or Tracking).                                                                                                 |
 
 ## Specification
 
 <Tabs queryString="tab">
-  <TabItem value="schema" label="Schema" default>
+  <TabItem
+    value="schema"
+    label="Schema"
+    default
+  >
     <JSONSchemaViewer
-      resolverOptions={generateResolverOptions({ "remote": true })}
+      resolverOptions={generateResolverOptions({ remote: true })}
       schema={schema}
       viewerOptions={{ showExamples: true }}
     />
   </TabItem>
-  <TabItem value="source" label="Source">
-    <CodeBlock language="json" showLineNumbers>
+  <TabItem
+    value="source"
+    label="Source"
+  >
+    <CodeBlock
+      language="json"
+      showLineNumbers
+    >
       {JSON.stringify(schema, null, 2)}
     </CodeBlock>
   </TabItem>
-  <TabItem value="example" label="Example">
-    <CodeBlock language="json" showLineNumbers>
+  <TabItem
+    value="example"
+    label="Example"
+  >
+    <CodeBlock
+      language="json"
+      showLineNumbers
+    >
       {JSON.stringify(example, null, 2)}
     </CodeBlock>
   </TabItem>
