Add standardized Official and JSON Schema URLs to element pages
Signed-off-by: Jeremy Ho <jujaga@gmail.com>

--- a/docs/spec/element/data/event.mdx
+++ b/docs/spec/element/data/event.mdx
@@ -20,6 +20,10 @@ import schema from '@site/docs/spec/element/data/event.schema.json';
 
 [![Maturity:Trial](https://img.shields.io/badge/Maturity-Trial-green)](/docs/spec#maturity)
 
+Official URL: `https://bcgov.github.io/nr-pies/docs/spec/element/data/event`
+
+JSON Schema URL: https://raw.githubusercontent.com/bcgov/nr-pies/refs/heads/main/docs/spec/element/data/event.schema.json
+
 Represents an event concept. It allows either a date or a datetime, but not a mix of both. One of the start properties is required, but the end properties are optional.
 
 ## Scope
