--- a/docs/spec/element/data/header.mdx
+++ b/docs/spec/element/data/header.mdx
@@ -17,6 +17,10 @@ import schema from '@site/docs/spec/element/data/header.schema.json';
 
 [![Maturity:Draft](https://img.shields.io/badge/Maturity-Draft-yellow)](/docs/spec#maturity)
 
+Official URL: `https://bcgov.github.io/nr-pies/docs/spec/element/data/header`
+
+JSON Schema URL: https://raw.githubusercontent.com/bcgov/nr-pies/refs/heads/main/docs/spec/element/data/header.schema.json
+
 Standard message header attributes present for all PIES message data types. All defined attributes are needed for
 identification and attribution.
 
