--- a/docs/spec/element/data/parcel_id.mdx
+++ b/docs/spec/element/data/parcel_id.mdx
@@ -17,6 +17,10 @@ import schema from '@site/docs/spec/element/data/parcel_id.schema.json';
 
 [![Maturity:Draft](https://img.shields.io/badge/Maturity-Draft-yellow)](/docs/spec#maturity)
 
+Official URL: `https://bcgov.github.io/nr-pies/docs/spec/element/data/parcel_id`
+
+JSON Schema URL: https://raw.githubusercontent.com/bcgov/nr-pies/refs/heads/main/docs/spec/element/data/parcel_id.schema.json
+
 An identifier for a specific area with clear boundaries.
 
 There a multiple ways to identify a parcel. Most common are the Parcel ID (PID) or Parcel Identification Number (PIN).
