--- a/docs/spec/element/data/project_bundle.mdx
+++ b/docs/spec/element/data/project_bundle.mdx
@@ -17,6 +17,10 @@ import schema from '@site/docs/spec/element/data/project_bundle.schema.json';
 
 [![Maturity:Planning](https://img.shields.io/badge/Maturity-Planning-orange)](/docs/spec#maturity)
 
+Official URL: `https://bcgov.github.io/nr-pies/docs/spec/element/data/project_bundle`
+
+JSON Schema URL: https://raw.githubusercontent.com/bcgov/nr-pies/refs/heads/main/docs/spec/element/data/project_bundle.schema.json
+
 A set of one or more permits related to an activity.
 
 A project is defined by an activity with one or more permits. Grouping of a primary authorization with secondary or associated authorizations that are triggered or required by the primary authorization. For example: major mine permit (primary) and associated auxiliary (secondary) permits such as License to Cut, Water Use, and or Road Use.
