--- a/docs/spec/element/message/record_linkage.mdx
+++ b/docs/spec/element/message/record_linkage.mdx
@@ -18,13 +18,15 @@ import schema from '@site/docs/spec/element/message/record_linkage.schema.json';
 
 [![Maturity:Planning](https://img.shields.io/badge/Maturity-Planning-orange)](/docs/spec#maturity)
 
-Represents an assertion for specific records to be related or linked together.
+Official URL: `https://bcgov.github.io/nr-pies/docs/spec/element/message/record_linkage`
+
+JSON Schema URL: https://raw.githubusercontent.com/bcgov/nr-pies/refs/heads/main/docs/spec/element/message/record_linkage.schema.json
+
+Represents an assertion for a specific record to be related or linked to another record.
 
 ## Scope
 
-This message type is intended to allow systems to assert that two records are related and should be linked
-However, this message only serves as an assertion; validation of the relationship between the records is left to the
-consuming system.
+This message type is intended to allow systems to assert that two records are related and should be linked. However, this message only serves as an assertion; validation of the relationship between the records is left to the consuming system.
 
 ## Structure
 
