--- a/docs/spec/element/resource/process_event.mdx
+++ b/docs/spec/element/resource/process_event.mdx
@@ -17,6 +17,10 @@ import schema from '@site/docs/spec/element/resource/process_event.schema.json';
 
 [![Maturity:Trial](https://img.shields.io/badge/Maturity-Trial-green)](/docs/spec#maturity)
 
+Official URL: `https://bcgov.github.io/nr-pies/docs/spec/element/resource/process_event`
+
+JSON Schema URL: https://raw.githubusercontent.com/bcgov/nr-pies/refs/heads/main/docs/spec/element/resource/process_event.schema.json
+
 Represents a process concept at a specific event in time.
 
 ## Scope
