--- a/docs/spec/element/data/code.mdx
+++ b/docs/spec/element/data/code.mdx
@@ -16,6 +16,10 @@ import schema from '@site/docs/spec/element/data/code.schema.json';
 
 [![Maturity:Trial](https://img.shields.io/badge/Maturity-Trial-green)](/docs/spec#maturity)
 
+Official URL: `https://bcgov.github.io/nr-pies/docs/spec/element/data/code`
+
+JSON Schema URL: https://raw.githubusercontent.com/bcgov/nr-pies/refs/heads/main/docs/spec/element/data/code.schema.json
+
 Indicates that the value is taken from a set of controlled strings defined elsewhere. Technically, a code is restricted
 to a string which has at least one character and no leading or trailing whitespace, and where there is no whitespace
 other than single spaces in the contents.
