--- a/docs/spec/element/data/process.mdx
+++ b/docs/spec/element/data/process.mdx
@@ -17,6 +17,10 @@ import schema from '@site/docs/spec/element/data/process.schema.json';
 
 [![Maturity:Trial](https://img.shields.io/badge/Maturity-Trial-green)](/docs/spec#maturity)
 
+Official URL: `https://bcgov.github.io/nr-pies/docs/spec/element/data/process`
+
+JSON Schema URL: https://raw.githubusercontent.com/bcgov/nr-pies/refs/heads/main/docs/spec/element/data/process.schema.json
+
 Represents a process tracking concept.
 
 ## Scope
