--- a/docs/spec/element/message/process_event_set.mdx
+++ b/docs/spec/element/message/process_event_set.mdx
@@ -18,6 +18,10 @@ import schema from '@site/docs/spec/element/message/process_event_set.schema.jso
 
 [![Maturity:Draft](https://img.shields.io/badge/Maturity-Draft-yellow)](/docs/spec#maturity)
 
+Official URL: `https://bcgov.github.io/nr-pies/docs/spec/element/message/process_event_set`
+
+JSON Schema URL: https://raw.githubusercontent.com/bcgov/nr-pies/refs/heads/main/docs/spec/element/message/process_event_set.schema.json
+
 Represents a set of process events associated to a specific record.
 
 ## Scope
