Update code and description headers to match between mdx and schema
Signed-off-by: Jeremy Ho <jujaga@gmail.com>

--- a/docs/spec/element/data/header.mdx
+++ b/docs/spec/element/data/header.mdx
@@ -1,7 +1,7 @@
 ---
 id: header
 title: Header 📝
-description: Standard message header attributes present for all PIES message data types
+description: Represents a set of standardized attributes needed for identification and attribution.
 tags:
   - developer
 ---
