--- a/docs/spec/element/data/code.mdx
+++ b/docs/spec/element/data/code.mdx
@@ -1,7 +1,7 @@
 ---
 id: code
 title: Code 🔬
-description: A code type.
+description: A code symbol element.
 tags:
   - developer
 ---
@@ -20,9 +20,9 @@ Official URL: `https://bcgov.github.io/nr-pies/docs/spec/element/data/code`
 
 JSON Schema URL: https://raw.githubusercontent.com/bcgov/nr-pies/refs/heads/main/docs/spec/element/data/code.schema.json
 
-Indicates that the value is taken from a set of controlled strings defined elsewhere. Technically, a code is restricted
-to a string which has at least one character and no leading or trailing whitespace, and where there is no whitespace
-other than single spaces in the contents.
+A code is a value taken from a set of controlled symbols defined within a [Code System](/docs/category/code-system).
+Technically, a code is restricted to a string which starts with an uppercase letter, followed by uppercase letters or
+digits, optionally separated by underscores, with no leading or trailing whitespace.
 
 ## Scope
 
