--- a/docs/spec/element/data/code.mdx
+++ b/docs/spec/element/data/code.mdx
@@ -21,8 +21,8 @@ Official URL: `https://bcgov.github.io/nr-pies/docs/spec/element/data/code`
 JSON Schema URL: https://raw.githubusercontent.com/bcgov/nr-pies/refs/heads/main/docs/spec/element/data/code.schema.json
 
 A code is a value taken from a set of controlled symbols defined within a [Code System](/docs/category/code-system).
-Technically, a code is restricted to a string which starts with an uppercase letter, followed by uppercase letters or
-digits, optionally separated by underscores, with no leading or trailing whitespace.
+Code values shall adhere to the SCREAMING_SNAKE_CASE convention, utilizing uppercase letters and underscores to
+delineate words. Code values may contain numeric digits, but they must not be the first character.
 
 ## Scope
 
@@ -31,10 +31,10 @@ concept, element or idea.
 
 ## Structure
 
-| Attribute     | Value                             | Description & Constraints                                                                                                                                                                                      |
-| ------------- | --------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| Type          | `string`                          | Shall be represented in UTF-8 format, as specified in [RFC 3629](https://datatracker.ietf.org/doc/html/rfc3629), which is an extension of the [ISO 10646-1](https://www.iso.org/standard/76835.html) standard. |
-| Regex Pattern | `^[A-Z][A-Z0-9]*(?:_[A-Z0-9]+)*$` | String which starts with an uppercase letter, followed by uppercase letters or digits, optionally separated by underscores, with no leading or trailing whitespace.                                            |
+| Attribute     | Value                             | Description & Constraints                                                                                                                                                                                           |
+| ------------- | --------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| Type          | `string`                          | Shall be represented in UTF-8 format, as specified in [RFC 3629](https://datatracker.ietf.org/doc/html/rfc3629), which is an extension of the [ISO 10646-1](https://www.iso.org/standard/76835.html) standard.      |
+| Regex Pattern | `^[A-Z][A-Z0-9]*(?:_[A-Z0-9]+)*$` | String which adheres to the SCREAMING_SNAKE_CASE convention: starts with an uppercase letter, followed by uppercase letters or digits, optionally separated by underscores, with no leading or trailing whitespace. |
 
 ## Specification
 
